--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,6 @@
 # pytest.ini
 [pytest]
+addopts = -v
 norecursedirs = bin include lib lib64
-python_files = *_test.py
+testpaths = test
+python_files = *.py
